# ag-botkit

./: .gitignore  CLAUDE.md  CONTINUATION.md  MULTI_AGENT_PLAN.md  MVP_COMPLETE.md  Makefile  README.md  ROADMAP_AGENTS_SUMMARY.md  RTDS_SUBSCRIPTION_FIX.md  run_local.sh
.claude/: settings.local.json
.claude/agents/: advanced-risk.md  core-c-implementer.md  devops-infra.md  exec-gateway.md  monitor-ui.md  risk-engine.md  storage-layer.md  strategy-engine.md  system-architect.md
.github/workflows/: ci.yml  deploy.yml
core/: Makefile  README.md
core/examples/: debug_example  debug_example.c  simple2.c  simple_example  simple_example.c  test_simple
core/examples/debug_example.dSYM/Contents/Resources/DWARF/: debug_example
core/examples/simple_example.dSYM/Contents/Resources/DWARF/: simple_example
core/examples/simple_example.dSYM/Contents/Resources/Relocations/aarch64/: simple_example.yml
core/examples/test_simple.dSYM/Contents/Resources/DWARF/: test_simple
core/examples/test_simple.dSYM/Contents/Resources/Relocations/aarch64/: test_simple.yml
core/include/: ag_timeseries.h
core/src/: ag_timeseries.c
core/tests/: test_timeseries.c
deploy/: DEVOPS_IMPLEMENTATION_SUMMARY.md  README.md
deploy/docker/: .dockerignore  Dockerfile.minibot  Dockerfile.monitor  Dockerfile.risk  docker-compose.yml
deploy/k8s/: configmaps.yaml  ingress.yaml  minibot-deployment.yaml  monitor-deployment.yaml  namespace.yaml  secrets.yaml.template  timescaledb-statefulset.yaml
examples/minibot/: Cargo.toml  README.md  config.yaml
examples/minibot/src/: config.rs  main.rs  metrics.rs  rtds.rs
exec/: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  build.sh
exec/adapters/: mod.rs  venue_adapter.rs
exec/examples/: place_order.rs
exec/oms/: tracker.rs
exec/src/: engine.rs  error.rs  lib.rs  order.rs
exec/src/oms/: mod.rs  validator.rs
exec/src/ratelimit/: limiter.rs  mod.rs
exec/src/venues/: polymarket.rs
exec/tests/integration/: execution_engine_test.rs  mod.rs
exec/venues/: mod.rs  polymarket.rs
infra/monitoring/alerts/: rules.yaml
infra/monitoring/grafana/dashboards/: ag-botkit-overview.json  provisioning.yaml
infra/monitoring/prometheus/: config.yaml
infra/ops/runbooks/: deployment-runbook.md  disaster-recovery.md
infra/terraform/: eks.tf  main.tf  outputs.tf  rds.tf  variables.tf  vpc.tf
monitor/: COMPLETION_SUMMARY.md  IMPLEMENTATION_STATUS.md  Makefile  QUICKSTART.md  README.md  go.mod  test_metrics.py
monitor/cmd/monitor/: main.go
monitor/internal/server/: http.go  websocket.go
monitor/internal/storage/: metrics.go  metrics_test.go
monitor/web/: index.html
monitor/web/static/: app.js  style.css
risk/: ADVANCED_RISK_README.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
risk/benches/: advanced_benchmarks.rs
risk/docs/: GREEKS_GUIDE.md  STRESS_TESTING.md  VAR_METHODOLOGY.md
risk/examples/: example_policy.yaml
risk/examples/advanced/: calculate_var.rs  portfolio_risk.rs
risk/policies/: aggressive.yaml  conservative.yaml  multi_market.yaml
risk/src/: engine.rs  lib.rs  policy.rs  simulator.rs
risk/src/advanced/: error.rs  greeks.rs  metrics.rs  mod.rs  portfolio.rs  stress.rs  var.rs
risk/tests/: integration_tests.rs
scripts/: validate_agents.sh
storage/: .gitignore  COMPLETION_SUMMARY.md  Cargo.toml  IMPLEMENTATION.md  README.md  config.yaml  docker-compose.yml
storage/examples/: insert_metrics.rs  query_data.rs
storage/ingest/: buffer.rs  mod.rs
storage/query/: mod.rs
storage/retention/: mod.rs  policy.rs  scheduler.rs
storage/schemas/: execution.sql  metrics.sql
storage/schemas/migrations/: 001_initial_schema.sql
storage/scripts/: test.sh
storage/src/: config.rs  engine.rs  error.rs  execution.rs  lib.rs  types.rs
storage/tests/: integration.rs
storage/timescale/: connection.rs  mod.rs  query.rs
strategies/: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  config.example.yaml
strategies/backtest/: engine.rs  fill_simulator.rs  mod.rs
strategies/examples/: backtest.rs  run_strategy.rs
strategies/impl/: cross_market_arb.rs  market_maker.rs  mod.rs
strategies/signals/: composite.rs  microstructure.rs  mod.rs  technical.rs
strategies/src/: context.rs  coordinator.rs  error.rs  lib.rs  metrics.rs  types.rs
strategies/tests/: integration_tests.rs
