[package]
name = "ag-storage"
version = "0.1.0"
edition = "2021"
authors = ["AlgorithmicGrid Team"]
description = "TimescaleDB persistent storage layer for ag-botkit"
license = "MIT"

[lib]
name = "ag_storage"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# PostgreSQL/TimescaleDB client
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
deadpool-postgres = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUIDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1"

# Collections
indexmap = "2.1"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockall = "0.12"

# Test utilities
criterion = "0.5"
proptest = "1.4"

[[example]]
name = "insert_metrics"
path = "examples/insert_metrics.rs"

[[example]]
name = "query_data"
path = "examples/query_data.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
