[package]
name = "minibot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "minibot"
path = "src/main.rs"

[dependencies]
# WebSocket client
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = "0.4"

# Config
clap = { version = "4.4", features = ["derive"] }

# Risk library
ag_risk = { package = "ag-risk", path = "../../risk" }
